--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.10",
     "morgan": "~1.9.0",
-    "preconditions": "^2.2.1"
+    "preconditions": "^2.2.1",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
     "npmlog": "^4.1.2"
